# notebot

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
examples/: dice.rs
src/: bot.rs  context.rs  error.rs  event.rs  gate.rs  lib.rs  router.rs  scheduler.rs  store.rs
