[package]
name = "notebot"
version = "0.1.0"
edition = "2021"
description = "Misskey bot framework built on notecli"
license = "MIT"
repository = "https://github.com/hitalin/notebot"

[features]
default = ["keyring"]
# OS キーチェーンにトークンを保管 (notecli のデフォルト)。コンテナ内では
# seccomp が keyctl を塞ぐため使えない — Docker ビルドは --no-default-features
# にして、トークンは notecli.db (volume) に残す。
keyring = ["notecli/keyring"]

[dependencies]
# semver 未安定のため rev ピン。更新は意図的に rev を進める (ARCHITECTURE.md §10)
notecli = { git = "https://github.com/hitalin/notecli.git", rev = "f1931af84a384c749efa2cd5b9aa478d22d19393", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
croner = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["test-util"] }
rand = "0.9"
